# NanoSDK

./: .gitmodules  CMakeLists.txt  README.adoc  README.md  RELEASE_NOTES.adoc
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: NNGHelpers.cmake  NNGOptions.cmake
demo/async/: CMakeLists.txt
demo/http_client/: CMakeLists.txt
demo/mqtt/: CMakeLists.txt  mqtt_client.c  mqttv5_client.c
demo/mqtt_async/: CMakeLists.txt  mqtt_async.c
demo/mqttv5/: CMakeLists.txt  mqttv5_client.c
demo/mqttv5_scram/: CMakeLists.txt  mqttv5_scram.c
demo/multiurls_switch/: CMakeLists.txt  multiurls_switch.c
demo/paho/: CMakeLists.txt  paho.c
demo/quic/: CMakeLists.txt  client.c
demo/quic_mqtt/: CMakeLists.txt  quic_client.c
demo/quic_mqttv5/: CMakeLists.txt  quic_client_v5.c
demo/quic_mqttv5/include/nng/mqtt/: mqtt_quic.h
demo/quic_mqttv5/include/nng/supplemental/tls/: engine.h
demo/quic_mqttv5/lib/: libmsquic.so.2  libmsquic.so.2.1.8
demo/quic_mqttv5/lib/cmake/nng/: nng-config-version.cmake  nng-config.cmake  nng-targets-release.cmake  nng-targets.cmake
demo/quic_mqttv5/share/msquic/: msquic-config.cmake  msquic-release.cmake  msquic.cmake
demo/quic_mqttv5/src/: emqx_interface.h  message_time.h  property_type_map.h  quic_client_v5.c  sample_data.h  the_caller.c
demo/raw/: CMakeLists.txt
demo/reqrep/: CMakeLists.txt
demo/rest/: CMakeLists.txt
demo/stream/: CMakeLists.txt
docs/: BUILD_TLS.adoc
docs/man/: CMakeLists.txt  libnng.3.adoc  nng_mqtt_msg_get_publish.3.adoc  nng_mqtt_msg_set_publish.3.adoc  nng_mqtt_msg_subscribe.3.adoc  nng_mqtt_options.5.adoc  nng_mqtt_set_sqlite.3.adoc  nng_mqtt_subscribe_async.3.adoc  nng_mqtt_unsubscribe.3.adoc  nng_mqtt_unsubscribe_async.3.adoc  nng_mqttv5_client_open.3.adoc  nng_req.7.adoc
include/nng/: nng.h
include/nng/mqtt/: mqtt_client.h  mqtt_msquic.h  mqtt_paho.h  mqtt_quic.h
include/nng/supplemental/nanolib/: file.h  log.h
include/nng/supplemental/tls/: engine.h
include/nng/supplemental/util/: platform.h
src/: CMakeLists.txt  nng.c
src/compat/nanomsg/: CMakeLists.txt  compat_msg_test.c  nn.c
src/core/: CMakeLists.txt  aio.c  dialer.c  idhash.c  idhash.h  init.c  lmq.c  lmq.h  message.c  message_test.c  nng_impl.h  panic.c  pipe.c  platform.h  socket.c  stream.c  strs.c  strs.h
src/mqtt/protocol/mqtt/: CMakeLists.txt  mqtt_client.c  mqtt_client_v5.c  mqtt_msquic.c  mqtt_quic.c  mqtt_v5_client.c  mqttv5_client.c  mqttv5_quic.c  quic_client.c  sqlite_handler.c  sqlite_handler.h
src/mqtt/transport/tcp/: mqtt_tcp.c
src/mqtt/transport/tls/: mqtt_tls.c
src/platform/posix/: posix_clock.c  posix_file.c  posix_tcpconn.c  posix_thread.c
src/platform/windows/: win_clock.c  win_file.c  win_thread.c
src/sp/: transport.c
src/sp/protocol/reqrep0/: req.c  req_test.c
src/sp/protocol/survey0/: survey.c  survey_test.c
src/sp/transport/ipc/: ipc.c
src/sp/transport/tcp/: tcp.c
src/sp/transport/tls/: tls.c
src/supplemental/: CMakeLists.txt
src/supplemental/http/: http_server.c
src/supplemental/mqtt/: CMakeLists.txt  mqtt_codec.c  mqtt_msg.c  mqtt_msg.h  mqtt_nano_paho.c  mqtt_nano_paho.h  mqtt_public.c  mqtt_qos_db.c  mqtt_qos_db.h  mqtt_qos_db_api.c  mqtt_qos_db_api.h  mqtt_qos_db_test.c  mqtt_test.c
src/supplemental/nanolib/: CMakeLists.txt  base64.c  file.c  log.c
src/supplemental/quic/: CMakeLists.txt  quic_api.c  quic_api.h
src/supplemental/quic/msquic/: CMakeLists.txt
src/supplemental/scram/: CMakeLists.txt  scram.c  scram.h  scram_test.c
src/supplemental/sqlite/: CMakeLists.txt  sqlite3_test.c
src/supplemental/tls/: CMakeLists.txt  tls_common.c  tls_test.c
src/supplemental/tls/mbedtls/: tls.c
src/supplemental/tls/openssl/: CMakeLists.txt  openssl.c
src/supplemental/tls/wolfssl/: wolfssl.c
src/supplemental/util/: platform.c
src/supplemental/websocket/: websocket.c
src/testing/: nuts.h
